fix: improve mobile responsiveness and spacing in index page and styles, adjusting text alignment and margins for better presentation

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1094,6 +1094,7 @@ fieldset {
 @media (max-width: 768px) {
   .feature-details__item-title {
     font-size: 20px;
+    margin-bottom: 0.2rem;
   }
 }
 .feature-details__item-title span {
