--- a/assets/scss/pages/_index.scss
+++ b/assets/scss/pages/_index.scss
@@ -761,6 +761,7 @@
         margin-bottom: 1rem;
         @include md {
             font-size: 20px;
+            margin-bottom: 0.2rem;
         }
 
         span {
